--- a/style/info.css
+++ b/style/info.css
@@ -1,12 +1,74 @@
 .container {
     background: #FFFFFF;
+    width: 100%;
+    position: relative;
 }
-.test{
-    width: 120px;
+
+/*右边栏*/
+.right{
+    background-color: #F3F3EE;
+    display: block;
+    width: 36%;
+    position: absolute;
+    left: 103%;
+    top: 3.5%;
 }
+
+.column1,.column2 {
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 25px;
+    padding-bottom: 5px;
+}
+
+.title{
+    margin-bottom: 10px;
+    border-bottom:1px solid #999999;
+    padding-bottom: 8px;
+}
+
+.title::before{
+    content: url("../images/t_b2.png");
+}
+
+.title a{
+    color: #06A3B1;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.list li::before{
+    content: '。';
+    margin-left: 10px;
+    position: relative;
+    bottom: 6px;
+    color: #06A3B1;
+}
+
+.list li{
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    border-bottom:1px dashed #999999;
+    margin-bottom: 10px;
+    padding-bottom: 6px;
+}
+
+.list li a{
+    color: #4d4d4d;
+}
+
 .content {
-    padding: 50px;
+    padding: 40px;
     box-shadow: 0 6px 6px 0 rgba(7,17,27,0.2)
+}
+/*整体居中*/
+.container-types{
+    width: 62%;
+    position: relative;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 10px 0;
 }
 
 .content-title {
@@ -120,6 +182,8 @@ article{
         
     }
 }
+
+
 /*回到顶部*/
 
 #goTop{
@@ -140,4 +204,5 @@ article{
 #goTop:hover{
     background-color: #BEBEBE;
 }
+
 
